fixed lists with flex not wrapping

--- a/src/_includes/styles/base.css
+++ b/src/_includes/styles/base.css
@@ -50,6 +50,7 @@ dd {
 ul[role="list"],
 ol[role="list"] {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0;
